# fish-speech.rs

./: .gitignore  Cargo.toml  README.md  generate-filters.py  spec_transform_fish_c_order.npy  test-export.py  windows_guide.md
.github/workflows/: python-wheels.yaml
candle-gqa-kernels/: Cargo.toml
candle-gqa-kernels/src/: lib.rs  unary.cu
configs/: firefly_gan_vq.yaml
docs/: llama-weight-dict.txt  weight-dims-default.txt
fish-speech-core/lib/audio/: spectrogram.rs
fish-speech-core/lib/models/vqgan/: fsq.rs  grouped_residual_fsq.rs  quantizer.rs
fish-speech-core/src/: main.rs
fish_speech_core/: Cargo.toml
fish_speech_core/examples/: cuda_graph.rs
fish_speech_core/lib/: config.rs  lib.rs
fish_speech_core/lib/audio/: functional.rs  melfilters160.bytes  mod.rs  pcm_decode.rs  spectrogram.rs  stft.rs  wav.rs
fish_speech_core/lib/codec/: config.rs  decoder.rs  encoder.rs  firefly.rs  mod.rs
fish_speech_core/lib/codec/utils/: mod.rs
fish_speech_core/lib/lm/: dual_ar.rs  mod.rs
fish_speech_core/lib/lm/generate/: mod.rs  single_batch.rs  static_batch.rs  utils.rs
fish_speech_core/lib/lm/ops/: repeat_kv.rs
fish_speech_core/lib/lm/sampling/: mod.rs  rep_pen.rs
fish_speech_core/lib/lm/utils/: encode.rs
fish_speech_core/lib/models/: mod.rs
fish_speech_core/lib/models/lm/: dual_ar.rs  mod.rs
fish_speech_core/lib/models/lm/generate/: single_batch.rs  static_batch.rs  utils.rs
fish_speech_core/lib/models/lm/ops/: mod.rs  repeat_kv.rs
fish_speech_core/lib/models/lm/sampling/: mod.rs
fish_speech_core/lib/models/lm/utils/: encode.rs  mod.rs
fish_speech_core/lib/models/text2semantic/: mod.rs  silence_detector.rs
fish_speech_core/lib/models/text2semantic/generate/: batch.rs  mod.rs  single_batch.rs  utils.rs
fish_speech_core/lib/models/text2semantic/utils/: clean.rs  encode.rs  generate.rs  mod.rs  sample.rs  split.rs  text.rs
fish_speech_core/lib/models/vqgan/: config.rs  convnext.rs  decoder.rs  encoder.rs  fsq.rs  grouped_residual_fsq.rs  hifi_gan.rs  mod.rs  quantizer.rs
fish_speech_core/lib/models/vqgan/utils/: config.rs  mod.rs
fish_speech_core/lib/text/: clean.rs  mod.rs  prompt.rs
fish_speech_core/src/: main.rs
fish_speech_python/: Cargo.toml  README.md  encode_audio.py  hello.py  pyproject.toml  requirements.in  requirements.txt
fish_speech_python/src/: codec.rs  lib.rs  lm.rs  utils.rs
lib/audio/: functional.rs  melfilters160.bytes  mod.rs  pcm_decode.rs
lib/models/: mod.rs
lib/models/vqgan/: convnext.rs  fsq.rs  grouped_residual_fsq.rs  mod.rs  quantizer.rs
notebooks/: convert-weights.ipynb  create-filter-bank.ipynb  requirements.in  requirements.txt
scripts/: bump_version.sh
server/: Cargo.toml
server/lib/: error.rs  generate.rs  handlers.rs  lib.rs  opus.rs  state.rs
server/lib/audio/: codec.rs  mimi.rs  mod.rs
server/lib/handlers/: encode_speech.rs  error.rs  mod.rs  send_hidden_states.rs  speech.rs  supported_voices.rs
server/lib/utils/: load.rs  mod.rs
server/src/: main.rs
src/: main.rs
tests/e2e/: allclose_indices.py  backbone-allclose.py  hello.py  pyproject.toml
tests/resources/: candle_fish_preprocessed_audio.npy  fake_preprocessed_audio.npy
training/silence-detection/: README.md  create_speakers.ipynb  generate_hidden_states.ipynb  hello.py  pyproject.toml  train_probe.ipynb  train_probe.py
training/silence-detection/.ipynb_checkpoints/: foo-checkpoint.ipynb  pyproject-checkpoint.toml
voices/: index.json
voices-template/: default.npy  index.json
