[workspace]
members = [
    "candle-gqa-kernels",
    "fish_speech_core",
    "fish_speech_python",
    "server",
]
resolver = "2"
package.version = "0.3.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
candle-core = "0.8.3"
candle-nn = "0.8.3"
candle-transformers = "0.8.3"
candle-flash-attn = "0.8.3"
tokenizers = "0.20.0"
