[package]
name = "fish_speech_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "fish_speech_core"
path = "lib/lib.rs"


[features]
# DO NOT MERGE THIS, JACOB YOU FOOL, YOU MORON
default = ["cuda"]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:candle-gqa-ops",
]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]

[[example]]
name="cuda_graph"
required_features=["cuda"]

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "0d96ec31e8be03f844ed0aed636d6217dee9c7bc" }
candle-flash-attn = { version = "0.7.2", optional = true }
candle-gqa-ops = { git = "https://github.com/EndlessReform/candle-gqa-kernels.git", branch = "cuda-stream-compat", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "0d96ec31e8be03f844ed0aed636d6217dee9c7bc" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "0d96ec31e8be03f844ed0aed636d6217dee9c7bc" }
clap = { version = "4.5.16", features = ["derive"] }
hf-hub = "0.3.2"
indicatif = "0.17.8"
num = "0.4.3"
num-traits = "0.2.19"
rand = "0.8.5"
regex = "1.10.6"
rustfft = "6.2.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
symphonia = "0.5.4"
thiserror = "1.0.63"
tokenizers = "0.20.0"
