[package]
name = "fish_speech_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "fish_speech"
crate-type = ["cdylib"]

[dependencies]
candle-core = {workspace = true}
candle-nn = {workspace = true}
hf-hub = { version = "0.3.2", features = ["tokio"] }
pyo3 = { version = "0.19.0", features = ["extension-module"] }
tokio = { version = "1.40.0" }

[dependencies.fish_speech_core]
path = "../fish_speech_core"
