[package]
name = "fish_speech_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "fish_speech"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
candle-core = { workspace = true }
candle-nn = { workspace = true }
numpy = "0.23.0"
pyo3 = { version = "0.23.0", features = ["extension-module"] }
tokio = { version = "1.40.0" }

[dependencies.fish_speech_core]
path = "../fish_speech_core"
