[project]
name = "fish_speech_rs"
# Handled by maturin
description = "High-performance speech synthesis"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0"
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
