[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "lib/lib.rs"

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:candle-gqa-ops",
]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]


[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.6"
axum ={ version =  "0.7.7", features =["multipart"] }
byteorder = "1.5.0"
bytes = "1.8.0"
candle-core = "0.7.2"
candle-flash-attn = { version = "0.7.2", optional = true }
candle-gqa-ops = { git = "https://github.com/EndlessReform/candle-gqa-kernels.git", branch = "master", optional = true }
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
hf-hub = "0.3.2"
indicatif = "0.17.8"
num = "0.4.3"
num-traits = "0.2.19"
ogg = {version = "0.9.1", features = ["tokio-util",  "async"] }
opus = "0.3.0"
rand = "0.8.5"
regex = "1.10.6"
rustfft = "6.2.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
symphonia = "0.5.4"
tempfile = "3.14.0"
thiserror = "1.0.63"
tokenizers = "0.20.0"
tokio = {version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
tower = "0.5.1"
tracing = "0.1.40"

[dependencies.fish_speech_core]
path = "../fish_speech_core"
