[project]
name = "silence-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
    "datasets>=3.1.0",
    "librosa>=0.10.2.post1",
    "numpy==1.23.5",
    "pandas<=2.1.0",
    "requests>=2.32.3",
    "soundfile>=0.12.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
